# hexlet_pytest

./: .coverage  pyproject.toml
.history/: README_20240527233425.md  README_20240527233936.md  README_20240527233949.md  README_20240527233956.md
tests/: test_example.py
