[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Grisha Igoshkin <mr.igoshkin@inbox.ru>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
